Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
-# Models
-# Gemini models
-LLM_OCR=gemini-2.5-pro
-# OpenRouter
-LLM_CHECKER=anthropic/claude-sonnet-4
+# LLMs
+# Gemini: without '/'
+# OpenAI/OpenRouter: with '/'
+LLM_OCR=gemini-2.5-flash
+LLM_CHECKER=openai/gpt-4.1-mini
 
 # OpenAI
 OPENAI_API_KEY=
+
+# OpenRouter
+OPENROUTER_API_KEY=
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 
 # Google
 GOOGLE_API_KEY=
@@ -21,10 +25,6 @@ OCR_PROCESSOR_VERSION=pretrained-ocr-v2.0-2023-06-02
 FORM_PROCESSOR_ID=
 # Refer to https://cloud.google.com/document-ai/docs/manage-processor-versions for more information
 FORM_PROCESSOR_VERSION=pretrained-form-parser-v2.0-2022-11-10
-
-# OpenRouter
-OPENROUTER_API_KEY=
-OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 
 # LangSmith
 LANGSMITH_TRACING_V2=true
