--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "google-cloud-documentai>=3.5.0",
     "google-cloud-documentai-toolbox>=0.14.2a0",
+    "google-genai>=1.25.0",
     "ipython>=9.4.0",
     "langchain>=0.3.26",
     "langchain-google-genai>=2.1.7",
